--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.0.3",
     "nodemailer": "^6.9.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
